CDK/account/cdk.out/vpcSetUp.template.json
{
  "Description": "Deletes all default VPCs and creates a new customized one",
  "Resources": {
    "BasicVpc30C9C2CB": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "192.168.0.0/20",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpcSetUp/Basic_Vpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpcSetUp/Basic_Vpc/Resource"
      }
    },
    "BasicVpcPublicSubnet1Subnet5FD9DDC2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "192.168.0.0/22",
        "VpcId": {
          "Ref": "BasicVpc30C9C2CB"
        },
        "AvailabilityZone": "eu-central-1a",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpcSetUp/Basic_Vpc/PublicSubnet1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpcSetUp/Basic_Vpc/PublicSubnet1/Subnet"
      }
    },
    "BasicVpcPublicSubnet1RouteTable7B328207": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "BasicVpc30C9C2CB"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpcSetUp/Basic_Vpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpcSetUp/Basic_Vpc/PublicSubnet1/RouteTable"
      }
    },
    "BasicVpcPublicSubnet1RouteTableAssociation82DE7634": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "BasicVpcPublicSubnet1RouteTable7B328207"
        },
        "SubnetId": {
          "Ref": "BasicVpcPublicSubnet1Subnet5FD9DDC2"
        }
      },
      "Metadata": {
        "aws:cdk:path": "vpcSetUp/Basic_Vpc/PublicSubnet1/RouteTableAssociation"
      }
    },
    "BasicVpcPublicSubnet1DefaultRouteDCC9CB12": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "BasicVpcPublicSubnet1RouteTable7B328207"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "BasicVpcIGW0CB62AA2"
        }
      },
      "DependsOn": [
        "BasicVpcVPCGWD7AB5A69"
      ],
      "Metadata": {
        "aws:cdk:path": "vpcSetUp/Basic_Vpc/PublicSubnet1/DefaultRoute"
      }
    },
    "BasicVpcPublicSubnet2SubnetF45B34F3": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "192.168.4.0/22",
        "VpcId": {
          "Ref": "BasicVpc30C9C2CB"
        },
        "AvailabilityZone": "eu-central-1b",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpcSetUp/Basic_Vpc/PublicSubnet2"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpcSetUp/Basic_Vpc/PublicSubnet2/Subnet"
      }
    },
    "BasicVpcPublicSubnet2RouteTableF66ABCD4": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "BasicVpc30C9C2CB"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpcSetUp/Basic_Vpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpcSetUp/Basic_Vpc/PublicSubnet2/RouteTable"
      }
    },
    "BasicVpcPublicSubnet2RouteTableAssociation3301450B": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "BasicVpcPublicSubnet2RouteTableF66ABCD4"
        },
        "SubnetId": {
          "Ref": "BasicVpcPublicSubnet2SubnetF45B34F3"
        }
      },
      "Metadata": {
        "aws:cdk:path": "vpcSetUp/Basic_Vpc/PublicSubnet2/RouteTableAssociation"
      }
    },
    "BasicVpcPublicSubnet2DefaultRoute325F1898": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "BasicVpcPublicSubnet2RouteTableF66ABCD4"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "BasicVpcIGW0CB62AA2"
        }
      },
      "DependsOn": [
        "BasicVpcVPCGWD7AB5A69"
      ],
      "Metadata": {
        "aws:cdk:path": "vpcSetUp/Basic_Vpc/PublicSubnet2/DefaultRoute"
      }
    },
    "BasicVpcPrivateSubnet1SubnetA17E648A": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "192.168.8.0/22",
        "VpcId": {
          "Ref": "BasicVpc30C9C2CB"
        },
        "AvailabilityZone": "eu-central-1a",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpcSetUp/Basic_Vpc/PrivateSubnet1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpcSetUp/Basic_Vpc/PrivateSubnet1/Subnet"
      }
    },
    "BasicVpcPrivateSubnet1RouteTableDDD2C414": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "BasicVpc30C9C2CB"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpcSetUp/Basic_Vpc/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpcSetUp/Basic_Vpc/PrivateSubnet1/RouteTable"
      }
    },
    "BasicVpcPrivateSubnet1RouteTableAssociation759DA127": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "BasicVpcPrivateSubnet1RouteTableDDD2C414"
        },
        "SubnetId": {
          "Ref": "BasicVpcPrivateSubnet1SubnetA17E648A"
        }
      },
      "Metadata": {
        "aws:cdk:path": "vpcSetUp/Basic_Vpc/PrivateSubnet1/RouteTableAssociation"
      }
    },
    "BasicVpcPrivateSubnet2Subnet8E02F4D9": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "192.168.12.0/22",
        "VpcId": {
          "Ref": "BasicVpc30C9C2CB"
        },
        "AvailabilityZone": "eu-central-1b",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpcSetUp/Basic_Vpc/PrivateSubnet2"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpcSetUp/Basic_Vpc/PrivateSubnet2/Subnet"
      }
    },
    "BasicVpcPrivateSubnet2RouteTable12844C56": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "BasicVpc30C9C2CB"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpcSetUp/Basic_Vpc/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpcSetUp/Basic_Vpc/PrivateSubnet2/RouteTable"
      }
    },
    "BasicVpcPrivateSubnet2RouteTableAssociation88765D78": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "BasicVpcPrivateSubnet2RouteTable12844C56"
        },
        "SubnetId": {
          "Ref": "BasicVpcPrivateSubnet2Subnet8E02F4D9"
        }
      },
      "Metadata": {
        "aws:cdk:path": "vpcSetUp/Basic_Vpc/PrivateSubnet2/RouteTableAssociation"
      }
    },
    "BasicVpcIGW0CB62AA2": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpcSetUp/Basic_Vpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpcSetUp/Basic_Vpc/IGW"
      }
    },
    "BasicVpcVPCGWD7AB5A69": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "BasicVpc30C9C2CB"
        },
        "InternetGatewayId": {
          "Ref": "BasicVpcIGW0CB62AA2"
        }
      },
      "Metadata": {
        "aws:cdk:path": "vpcSetUp/Basic_Vpc/VPCGW"
      }
    },
    "DeleteDefaultVPCServiceRole41812950": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
              ]
            ]
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpcSetUp/Delete_Default_VPC/ServiceRole/Resource"
      }
    },
    "DeleteDefaultVPCServiceRoleDefaultPolicy1B67401D": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "ec2:DeleteSecurityGroup",
                "ec2:DescribeSecurityGroups",
                "ec2:DescribeStaleSecurityGroups",
                "ec2:DescribeRouteTables",
                "ec2:DeleteRoute",
                "ec2:DeleteRouteTable",
                "ec2:DescribeNetworkAcls",
                "ec2:DeleteNetworkAcl",
                "ec2:DescribeSubnets",
                "ec2:DeleteSubnet",
                "ec2:DescribeNetworkInterfaces",
                "ec2:DetachNetworkInterface",
                "ec2:DescribeVpcAttribute",
                "ec2:DescribeVpcs",
                "ec2:DeleteVpc",
                "ec2:DescribeInternetGateways",
                "ec2:DetachInternetGateway",
                "ec2:DeleteInternetGateway",
                "ec2:DescribeRegions",
                "ec2:DescribeAccountAttributes"
              ],
              "Effect": "Allow",
              "Resource": "*"
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "DeleteDefaultVPCServiceRoleDefaultPolicy1B67401D",
        "Roles": [
          {
            "Ref": "DeleteDefaultVPCServiceRole41812950"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpcSetUp/Delete_Default_VPC/ServiceRole/DefaultPolicy/Resource"
      }
    },
    "DeleteDefaultVPCA1FCE209": {
      "Type": "AWS::Lambda::Function",
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "AssetParameters0d9e0aff1c669ff9e72194486e7299bb616310ce1d00c31f103603c7dd0ddd68S3Bucket3F01804D"
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters0d9e0aff1c669ff9e72194486e7299bb616310ce1d00c31f103603c7dd0ddd68S3VersionKeyE1CCA944"
                        }
                      ]
                    }
                  ]
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters0d9e0aff1c669ff9e72194486e7299bb616310ce1d00c31f103603c7dd0ddd68S3VersionKeyE1CCA944"
                        }
                      ]
                    }
                  ]
                }
              ]
            ]
          }
        },
        "Handler": "handler.DeleteDefaultVPC",
        "Role": {
          "Fn::GetAtt": [
            "DeleteDefaultVPCServiceRole41812950",
            "Arn"
          ]
        },
        "Runtime": "python3.7",
        "FunctionName": "Lambda_Daily_Delete_Default_VPC",
        "MemorySize": 128,
        "Timeout": 300
      },
      "DependsOn": [
        "DeleteDefaultVPCServiceRoleDefaultPolicy1B67401D",
        "DeleteDefaultVPCServiceRole41812950"
      ],
      "Metadata": {
        "aws:cdk:path": "vpcSetUp/Delete_Default_VPC/Resource",
        "aws:asset:path": "asset.0d9e0aff1c669ff9e72194486e7299bb616310ce1d00c31f103603c7dd0ddd68",
        "aws:asset:property": "Code"
      }
    },
    "DeleteDefaultVPCLogRetention9FECC465": {
      "Type": "Custom::LogRetention",
      "Properties": {
        "ServiceToken": {
          "Fn::GetAtt": [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A",
            "Arn"
          ]
        },
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "DeleteDefaultVPCA1FCE209"
              }
            ]
          ]
        },
        "RetentionInDays": 5
      },
      "Metadata": {
        "aws:cdk:path": "vpcSetUp/Delete_Default_VPC/LogRetention/Resource"
      }
    },
    "DeleteDefaultVPCEventInvokeConfig655128A4": {
      "Type": "AWS::Lambda::EventInvokeConfig",
      "Properties": {
        "FunctionName": {
          "Ref": "DeleteDefaultVPCA1FCE209"
        },
        "Qualifier": "$LATEST",
        "MaximumRetryAttempts": 1
      },
      "Metadata": {
        "aws:cdk:path": "vpcSetUp/Delete_Default_VPC/EventInvokeConfig/Resource"
      }
    },
    "DeleteDefaultVPCAllowEventRulevpcSetUpScheduleVPCCheckLambdaEE40FF736429E3ED": {
      "Type": "AWS::Lambda::Permission",
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "DeleteDefaultVPCA1FCE209",
            "Arn"
          ]
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "ScheduleVPCCheckLambdaFC6ABEDF",
            "Arn"
          ]
        }
      },
      "Metadata": {
        "aws:cdk:path": "vpcSetUp/Delete_Default_VPC/AllowEventRulevpcSetUpScheduleVPCCheckLambdaEE40FF73"
      }
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
              ]
            ]
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpcSetUp/LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8a/ServiceRole/Resource"
      }
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:PutRetentionPolicy",
                "logs:DeleteRetentionPolicy"
              ],
              "Effect": "Allow",
              "Resource": "*"
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "Roles": [
          {
            "Ref": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpcSetUp/LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8a/ServiceRole/DefaultPolicy/Resource"
      }
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A": {
      "Type": "AWS::Lambda::Function",
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "AssetParameters5741f85917ffca30b209ad61e375d3d3bae0457270071f7aca8ca81be19bd22aS3Bucket4E933C7F"
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters5741f85917ffca30b209ad61e375d3d3bae0457270071f7aca8ca81be19bd22aS3VersionKeyB83CC434"
                        }
                      ]
                    }
                  ]
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters5741f85917ffca30b209ad61e375d3d3bae0457270071f7aca8ca81be19bd22aS3VersionKeyB83CC434"
                        }
                      ]
                    }
                  ]
                }
              ]
            ]
          }
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
            "Arn"
          ]
        },
        "Runtime": "nodejs10.x"
      },
      "DependsOn": [
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB"
      ],
      "Metadata": {
        "aws:cdk:path": "vpcSetUp/LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8a/Resource",
        "aws:asset:path": "asset.5741f85917ffca30b209ad61e375d3d3bae0457270071f7aca8ca81be19bd22a",
        "aws:asset:property": "Code"
      }
    },
    "ScheduleVPCCheckLambdaFC6ABEDF": {
      "Type": "AWS::Events::Rule",
      "Properties": {
        "ScheduleExpression": "cron(0 22 ? * * *)",
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "DeleteDefaultVPCA1FCE209",
                "Arn"
              ]
            },
            "Id": "Target0"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpcSetUp/Schedule_VPC_Check_Lambda/Resource"
      }
    }
  },
  "Parameters": {
    "AssetParameters0d9e0aff1c669ff9e72194486e7299bb616310ce1d00c31f103603c7dd0ddd68S3Bucket3F01804D": {
      "Type": "String",
      "Description": "S3 bucket for asset \"0d9e0aff1c669ff9e72194486e7299bb616310ce1d00c31f103603c7dd0ddd68\""
    },
    "AssetParameters0d9e0aff1c669ff9e72194486e7299bb616310ce1d00c31f103603c7dd0ddd68S3VersionKeyE1CCA944": {
      "Type": "String",
      "Description": "S3 key for asset version \"0d9e0aff1c669ff9e72194486e7299bb616310ce1d00c31f103603c7dd0ddd68\""
    },
    "AssetParameters0d9e0aff1c669ff9e72194486e7299bb616310ce1d00c31f103603c7dd0ddd68ArtifactHash98877081": {
      "Type": "String",
      "Description": "Artifact hash for asset \"0d9e0aff1c669ff9e72194486e7299bb616310ce1d00c31f103603c7dd0ddd68\""
    },
    "AssetParameters5741f85917ffca30b209ad61e375d3d3bae0457270071f7aca8ca81be19bd22aS3Bucket4E933C7F": {
      "Type": "String",
      "Description": "S3 bucket for asset \"5741f85917ffca30b209ad61e375d3d3bae0457270071f7aca8ca81be19bd22a\""
    },
    "AssetParameters5741f85917ffca30b209ad61e375d3d3bae0457270071f7aca8ca81be19bd22aS3VersionKeyB83CC434": {
      "Type": "String",
      "Description": "S3 key for asset version \"5741f85917ffca30b209ad61e375d3d3bae0457270071f7aca8ca81be19bd22a\""
    },
    "AssetParameters5741f85917ffca30b209ad61e375d3d3bae0457270071f7aca8ca81be19bd22aArtifactHash5A536F97": {
      "Type": "String",
      "Description": "Artifact hash for asset \"5741f85917ffca30b209ad61e375d3d3bae0457270071f7aca8ca81be19bd22a\""
    }
  }
}
